// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainLayout /> should render and match the snapshot 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div
    class="ant-spin-container"
  >
    <div
      class="main-layout StyledMainLayout-jh4dg-0 chyjYC"
      data-environment="test"
    >
      <section
        class="ant-layout ant-layout-has-sider"
      >
        <aside
          class="ant-layout-sider ant-layout-sider-dark ant-layout-sider-collapsed"
          id="components-layout-demo-custom-trigger"
          style="flex: 0 0 80px; max-width: 80px; min-width: 80px; width: 80px;"
        >
          <div
            class="ant-layout-sider-children"
          >
            <div
              class="logo"
            >
              <a
                href="/"
              >
                <img
                  alt="logo"
                  src="IMAGE_MOCK"
                />
              </a>
            </div>
            <ul
              class="ant-menu ant-menu-dark ant-menu-inline-collapsed ant-menu-root ant-menu-vertical"
              role="menu"
            >
              <li
                class="ant-menu-item ant-menu-item-selected"
                role="menuitem"
              >
                <span
                  aria-label="user"
                  class="anticon anticon-user ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="user"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/"
                  >
                    Home
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="user"
                  class="anticon anticon-user ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="user"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/users"
                  >
                    User Management
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="check-circle"
                  class="anticon anticon-check-circle ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="check-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/features"
                  >
                    Features
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="smile"
                  class="anticon anticon-smile ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="smile"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/font-awesome"
                  >
                    Font Awesome Demo
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="loading"
                  class="anticon anticon-loading anticon-spin ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="loading"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/loader"
                  >
                    Loader Demo
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="export"
                  class="anticon anticon-export ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="export"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M888.3 757.4h-53.8c-4.2 0-7.7 3.5-7.7 7.7v61.8H197.1V197.1h629.8v61.8c0 4.2 3.5 7.7 7.7 7.7h53.8c4.2 0 7.7-3.4 7.7-7.7V158.7c0-17-13.7-30.7-30.7-30.7H158.7c-17 0-30.7 13.7-30.7 30.7v706.6c0 17 13.7 30.7 30.7 30.7h706.6c17 0 30.7-13.7 30.7-30.7V765.1c0-4.3-3.5-7.7-7.7-7.7zm18.6-251.7L765 393.7c-5.3-4.2-13-.4-13 6.3v76H438c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 000-12.6z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/export-data"
                  >
                    Export Data To CSV
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="number"
                  class="anticon anticon-number ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="number"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M872 394c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8H708V152c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v166H400V152c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v166H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h168v236H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h168v166c0 4.4 3.6 8 8 8h64c4.4 0 8-3.6 8-8V706h228v166c0 4.4 3.6 8 8 8h64c4.4 0 8-3.6 8-8V706h164c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8H708V394h164zM628 630H400V394h228v236z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/number-converter-demo"
                  >
                    Number Conversion Demo
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="form"
                  class="anticon anticon-form ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="form"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M904 512h-56c-4.4 0-8 3.6-8 8v320H184V184h320c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V520c0-4.4-3.6-8-8-8z"
                    />
                    <path
                      d="M355.9 534.9L354 653.8c-.1 8.9 7.1 16.2 16 16.2h.4l118-2.9c2-.1 4-.9 5.4-2.3l415.9-415c3.1-3.1 3.1-8.2 0-11.3L785.4 114.3c-1.6-1.6-3.6-2.3-5.7-2.3s-4.1.8-5.7 2.3l-415.8 415a8.3 8.3 0 00-2.3 5.6zm63.5 23.6L779.7 199l45.2 45.1-360.5 359.7-45.7 1.1.7-46.4z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/sample-form"
                  >
                    Redux-Saga Form
                  </a>
                </span>
              </li>
            </ul>
          </div>
        </aside>
        <section
          class="ant-layout site-layout"
        >
          <header
            class="ant-layout-header headerLayout"
          >
            <div
              class="StyledMainLayout__ToggleBreadCrumb-jh4dg-1 bxrHpo"
            >
              <span
                aria-label="Navigation Toggle"
                class="sideBarTrigger"
                data-testid="ToggleIcon"
                role="button"
                tabindex="0"
              >
                <span
                  aria-label="menu-unfold"
                  class="anticon anticon-menu-unfold"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="menu-unfold"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM142.4 642.1L298.7 519a8.84 8.84 0 000-13.9L142.4 381.9c-5.8-4.6-14.4-.5-14.4 6.9v246.3a8.9 8.9 0 0014.4 7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="StyledAppHeader-sc-305pn5-0 enPSEw"
            >
              <div
                class="StyledAppHeader__AvatarWrapper-sc-305pn5-2 khWwDg"
              >
                <div
                  class="StyledNotification__NotificationWrapper-sc-103nxwt-0 dQHYeo"
                >
                  <span
                    aria-label="bell"
                    class="anticon anticon-bell"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="bell"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="StyledAvatar__AvatarWrapper-sc-7zqxik-0 bIXJjY"
                >
                  <div
                    class="ant-btn-group ant-dropdown-button"
                  >
                    <button
                      class="ant-btn ant-btn-default"
                      type="button"
                    />
                    <button
                      class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
                      type="button"
                    >
                      <span
                        aria-label="user"
                        class="anticon anticon-user"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="user"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </header>
          <main
            class="ant-layout-content site-layout-background"
            style="margin: 24px 16px; padding: 24px; min-height: 280px;"
          >
            <div
              class="App__AppWrapper-sc-13edzow-0 hLuJAl"
              data-testid="AppRoutes"
            >
              <div
                class="Wrapper-sc-12uw37d-0 bTWIVF"
              >
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 cugXeI"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 hVmgzU"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 jsCyWc"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 foyKl"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 gTYfZB"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 iZyuJ"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 fvTfuf"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 fIczzm"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 hwKFhV"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 lcdrOe"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 cDNWsF"
                />
                <div
                  class="Circle__CirclePrimitive-ww56dy-0 dJoLom"
                />
              </div>
            </div>
          </main>
          <section
            class="ant-layout site-layout"
          >
            <footer
              class="Wrapper-wcfdfo-0 kJFYpj"
            >
              <section>
                <span>
                  © 2021 React Boilerplate
                </span>
                <section>
                  <span>
                    Get started with your next react application in seconds.
                  </span>
                </section>
              </section>
              <section>
                <div
                  class="Wrapper-xnjoq9-0 dNmQIR"
                >
                  <select
                    class="Select-sc-1sm01tk-0 wIjFa"
                  >
                    <option
                      value="en"
                    >
                      en
                    </option>
                    <option
                      value="de"
                    >
                      de
                    </option>
                  </select>
                </div>
              </section>
            </footer>
          </section>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`<MainLayout /> should render and match the snapshot 2`] = `
<div
  class="ant-spin-nested-loading"
>
  <div
    class="ant-spin-container"
  >
    <div
      class="main-layout StyledMainLayout-jh4dg-0 chyjYC"
    >
      <section
        class="ant-layout ant-layout-has-sider"
      >
        <aside
          class="ant-layout-sider ant-layout-sider-dark ant-layout-sider-collapsed"
          id="components-layout-demo-custom-trigger"
          style="flex: 0 0 80px; max-width: 80px; min-width: 80px; width: 80px;"
        >
          <div
            class="ant-layout-sider-children"
          >
            <div
              class="logo"
            >
              <a
                href="/"
              >
                <img
                  alt="logo"
                  src="IMAGE_MOCK"
                />
              </a>
            </div>
            <ul
              class="ant-menu ant-menu-dark ant-menu-inline-collapsed ant-menu-root ant-menu-vertical"
              role="menu"
            >
              <li
                class="ant-menu-item ant-menu-item-selected"
                role="menuitem"
              >
                <span
                  aria-label="user"
                  class="anticon anticon-user ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="user"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/"
                  >
                    Home
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="user"
                  class="anticon anticon-user ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="user"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/users"
                  >
                    User Management
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="check-circle"
                  class="anticon anticon-check-circle ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="check-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/features"
                  >
                    Features
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="smile"
                  class="anticon anticon-smile ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="smile"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/font-awesome"
                  >
                    Font Awesome Demo
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="loading"
                  class="anticon anticon-loading anticon-spin ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="loading"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/loader"
                  >
                    Loader Demo
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="export"
                  class="anticon anticon-export ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="export"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M888.3 757.4h-53.8c-4.2 0-7.7 3.5-7.7 7.7v61.8H197.1V197.1h629.8v61.8c0 4.2 3.5 7.7 7.7 7.7h53.8c4.2 0 7.7-3.4 7.7-7.7V158.7c0-17-13.7-30.7-30.7-30.7H158.7c-17 0-30.7 13.7-30.7 30.7v706.6c0 17 13.7 30.7 30.7 30.7h706.6c17 0 30.7-13.7 30.7-30.7V765.1c0-4.3-3.5-7.7-7.7-7.7zm18.6-251.7L765 393.7c-5.3-4.2-13-.4-13 6.3v76H438c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 000-12.6z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/export-data"
                  >
                    Export Data To CSV
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="number"
                  class="anticon anticon-number ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="number"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M872 394c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8H708V152c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v166H400V152c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v166H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h168v236H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h168v166c0 4.4 3.6 8 8 8h64c4.4 0 8-3.6 8-8V706h228v166c0 4.4 3.6 8 8 8h64c4.4 0 8-3.6 8-8V706h164c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8H708V394h164zM628 630H400V394h228v236z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/number-converter-demo"
                  >
                    Number Conversion Demo
                  </a>
                </span>
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
              >
                <span
                  aria-label="form"
                  class="anticon anticon-form ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="form"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M904 512h-56c-4.4 0-8 3.6-8 8v320H184V184h320c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V520c0-4.4-3.6-8-8-8z"
                    />
                    <path
                      d="M355.9 534.9L354 653.8c-.1 8.9 7.1 16.2 16 16.2h.4l118-2.9c2-.1 4-.9 5.4-2.3l415.9-415c3.1-3.1 3.1-8.2 0-11.3L785.4 114.3c-1.6-1.6-3.6-2.3-5.7-2.3s-4.1.8-5.7 2.3l-415.8 415a8.3 8.3 0 00-2.3 5.6zm63.5 23.6L779.7 199l45.2 45.1-360.5 359.7-45.7 1.1.7-46.4z"
                    />
                  </svg>
                </span>
                <span>
                  <a
                    href="/sample-form"
                  >
                    Redux-Saga Form
                  </a>
                </span>
              </li>
            </ul>
          </div>
        </aside>
        <section
          class="ant-layout site-layout"
        >
          <header
            class="ant-layout-header headerLayout"
          >
            <div
              class="StyledMainLayout__ToggleBreadCrumb-jh4dg-1 bxrHpo"
            >
              <span
                aria-label="Navigation Toggle"
                class="sideBarTrigger"
                data-testid="ToggleIcon"
                role="button"
                tabindex="0"
              >
                <span
                  aria-label="menu-unfold"
                  class="anticon anticon-menu-unfold"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="menu-unfold"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM142.4 642.1L298.7 519a8.84 8.84 0 000-13.9L142.4 381.9c-5.8-4.6-14.4-.5-14.4 6.9v246.3a8.9 8.9 0 0014.4 7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="StyledAppHeader-sc-305pn5-0 enPSEw"
            >
              <div
                class="StyledAppHeader__AvatarWrapper-sc-305pn5-2 khWwDg"
              >
                <div
                  class="StyledNotification__NotificationWrapper-sc-103nxwt-0 dQHYeo"
                >
                  <span
                    aria-label="bell"
                    class="anticon anticon-bell"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="bell"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="StyledAvatar__AvatarWrapper-sc-7zqxik-0 bIXJjY"
                >
                  <div
                    class="ant-btn-group ant-dropdown-button"
                  >
                    <button
                      class="ant-btn ant-btn-default"
                      type="button"
                    />
                    <button
                      class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
                      type="button"
                    >
                      <span
                        aria-label="user"
                        class="anticon anticon-user"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="user"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </header>
          <main
            class="ant-layout-content site-layout-background"
            style="margin: 24px 16px; padding: 24px; min-height: 280px;"
          >
            <div
              class="App__AppWrapper-sc-13edzow-0 hLuJAl"
              data-testid="AppRoutes"
            >
              <article>
                <div>
                  <section
                    class="Section-sc-1eulrsm-0 CenteredSection-sc-6zy0wx-0 imGCbL"
                  >
                    <h2>
                      <span>
                        Start your next react project in seconds
                      </span>
                    </h2>
                    <p>
                      <span>
                        A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices
                      </span>
                    </p>
                  </section>
                  <section
                    class="Section-sc-1eulrsm-0 eTEsZl"
                  >
                    <h2>
                      <span>
                        Try me!
                      </span>
                    </h2>
                    <form
                      class="Form-dmhz4x-0 ZClLh"
                    >
                      <label
                        for="username"
                      >
                        <span>
                          Show Github repositories by
                        </span>
                        <span
                          class="AtPrefix-sc-1suuq8o-0 fvrDQr"
                        >
                          <span>
                            @
                          </span>
                        </span>
                        <input
                          class="Input-sc-19rkjmi-0 gyJaEd"
                          id="username"
                          placeholder="mxstbr"
                          type="text"
                          value=""
                        />
                      </label>
                    </form>
                  </section>
                </div>
              </article>
            </div>
          </main>
          <section
            class="ant-layout site-layout"
          >
            <footer
              class="Wrapper-wcfdfo-0 kJFYpj"
            >
              <section>
                <span>
                  © 2021 React Boilerplate
                </span>
                <section>
                  <span>
                    Get started with your next react application in seconds.
                  </span>
                </section>
              </section>
              <section>
                <div
                  class="Wrapper-xnjoq9-0 dNmQIR"
                >
                  <select
                    class="Select-sc-1sm01tk-0 wIjFa"
                  >
                    <option
                      value="en"
                    >
                      en
                    </option>
                    <option
                      value="de"
                    >
                      de
                    </option>
                  </select>
                </div>
              </section>
            </footer>
          </section>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`<MainLayout /> with variant 2 should render and match the snapshot 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div
    class="ant-spin-container"
  >
    <div
      class="main-layout StyledMainLayout-jh4dg-0 chyjYC"
    >
      <section
        class="ant-layout"
      >
        <header
          class="ant-layout-header headerLayout"
        >
          <div
            class="logo Layout__LogoContainer-fhrxn-0 gpSMCV"
          >
            <a
              href="/"
            >
              <img
                alt="logo"
                src="IMAGE_MOCK"
              />
            </a>
          </div>
          <div
            class="StyledAppHeader-sc-305pn5-0 enPSEw"
          >
            <div
              class="StyledAppHeader__AvatarWrapper-sc-305pn5-2 khWwDg"
            >
              <div
                class="StyledNotification__NotificationWrapper-sc-103nxwt-0 dQHYeo"
              >
                <span
                  aria-label="bell"
                  class="anticon anticon-bell"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="bell"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="StyledAvatar__AvatarWrapper-sc-7zqxik-0 bIXJjY"
              >
                <div
                  class="ant-btn-group ant-dropdown-button"
                >
                  <button
                    class="ant-btn ant-btn-default"
                    type="button"
                  />
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
                    type="button"
                  >
                    <span
                      aria-label="user"
                      class="anticon anticon-user"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="user"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </header>
        <section
          class="ant-layout ant-layout-has-sider site-layout"
        >
          <aside
            class="ant-layout-sider ant-layout-sider-dark"
            id="components-layout-demo-custom-trigger"
            style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
          >
            <div
              class="ant-layout-sider-children"
            >
              <ul
                class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
                role="menu"
              >
                <li
                  class="ant-menu-item ant-menu-item-selected"
                  role="menuitem"
                  style="padding-left: 24px;"
                >
                  <span
                    aria-label="user"
                    class="anticon anticon-user ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="user"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                      />
                    </svg>
                  </span>
                  <span>
                    <a
                      href="/"
                    >
                      Home
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left: 24px;"
                >
                  <span
                    aria-label="user"
                    class="anticon anticon-user ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="user"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                      />
                    </svg>
                  </span>
                  <span>
                    <a
                      href="/users"
                    >
                      User Management
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left: 24px;"
                >
                  <span
                    aria-label="check-circle"
                    class="anticon anticon-check-circle ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="check-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                    </svg>
                  </span>
                  <span>
                    <a
                      href="/features"
                    >
                      Features
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left: 24px;"
                >
                  <span
                    aria-label="smile"
                    class="anticon anticon-smile ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="smile"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
                      />
                    </svg>
                  </span>
                  <span>
                    <a
                      href="/font-awesome"
                    >
                      Font Awesome Demo
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left: 24px;"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                  <span>
                    <a
                      href="/loader"
                    >
                      Loader Demo
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left: 24px;"
                >
                  <span
                    aria-label="export"
                    class="anticon anticon-export ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="export"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M888.3 757.4h-53.8c-4.2 0-7.7 3.5-7.7 7.7v61.8H197.1V197.1h629.8v61.8c0 4.2 3.5 7.7 7.7 7.7h53.8c4.2 0 7.7-3.4 7.7-7.7V158.7c0-17-13.7-30.7-30.7-30.7H158.7c-17 0-30.7 13.7-30.7 30.7v706.6c0 17 13.7 30.7 30.7 30.7h706.6c17 0 30.7-13.7 30.7-30.7V765.1c0-4.3-3.5-7.7-7.7-7.7zm18.6-251.7L765 393.7c-5.3-4.2-13-.4-13 6.3v76H438c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 000-12.6z"
                      />
                    </svg>
                  </span>
                  <span>
                    <a
                      href="/export-data"
                    >
                      Export Data To CSV
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left: 24px;"
                >
                  <span
                    aria-label="number"
                    class="anticon anticon-number ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="number"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M872 394c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8H708V152c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v166H400V152c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v166H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h168v236H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h168v166c0 4.4 3.6 8 8 8h64c4.4 0 8-3.6 8-8V706h228v166c0 4.4 3.6 8 8 8h64c4.4 0 8-3.6 8-8V706h164c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8H708V394h164zM628 630H400V394h228v236z"
                      />
                    </svg>
                  </span>
                  <span>
                    <a
                      href="/number-converter-demo"
                    >
                      Number Conversion Demo
                    </a>
                  </span>
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left: 24px;"
                >
                  <span
                    aria-label="form"
                    class="anticon anticon-form ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="form"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M904 512h-56c-4.4 0-8 3.6-8 8v320H184V184h320c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V520c0-4.4-3.6-8-8-8z"
                      />
                      <path
                        d="M355.9 534.9L354 653.8c-.1 8.9 7.1 16.2 16 16.2h.4l118-2.9c2-.1 4-.9 5.4-2.3l415.9-415c3.1-3.1 3.1-8.2 0-11.3L785.4 114.3c-1.6-1.6-3.6-2.3-5.7-2.3s-4.1.8-5.7 2.3l-415.8 415a8.3 8.3 0 00-2.3 5.6zm63.5 23.6L779.7 199l45.2 45.1-360.5 359.7-45.7 1.1.7-46.4z"
                      />
                    </svg>
                  </span>
                  <span>
                    <a
                      href="/sample-form"
                    >
                      Redux-Saga Form
                    </a>
                  </span>
                </li>
              </ul>
            </div>
          </aside>
          <main
            class="ant-layout-content site-layout-background"
            style="margin: 24px 16px; padding: 24px; min-height: 280px;"
          >
            <div
              class="App__AppWrapper-sc-13edzow-0 hLuJAl"
              data-testid="AppRoutes"
            >
              <article>
                <div>
                  <section
                    class="Section-sc-1eulrsm-0 CenteredSection-sc-6zy0wx-0 imGCbL"
                  >
                    <h2>
                      <span>
                        Start your next react project in seconds
                      </span>
                    </h2>
                    <p>
                      <span>
                        A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices
                      </span>
                    </p>
                  </section>
                  <section
                    class="Section-sc-1eulrsm-0 eTEsZl"
                  >
                    <h2>
                      <span>
                        Try me!
                      </span>
                    </h2>
                    <form
                      class="Form-dmhz4x-0 ZClLh"
                    >
                      <label
                        for="username"
                      >
                        <span>
                          Show Github repositories by
                        </span>
                        <span
                          class="AtPrefix-sc-1suuq8o-0 fvrDQr"
                        >
                          <span>
                            @
                          </span>
                        </span>
                        <input
                          class="Input-sc-19rkjmi-0 gyJaEd"
                          id="username"
                          placeholder="mxstbr"
                          type="text"
                          value=""
                        />
                      </label>
                    </form>
                  </section>
                </div>
              </article>
            </div>
          </main>
        </section>
        <footer
          class="Wrapper-wcfdfo-0 kJFYpj"
        >
          <section>
            <span>
              © 2021 React Boilerplate
            </span>
            <section>
              <span>
                Get started with your next react application in seconds.
              </span>
            </section>
          </section>
          <section>
            <div
              class="Wrapper-xnjoq9-0 dNmQIR"
            >
              <select
                class="Select-sc-1sm01tk-0 wIjFa"
              >
                <option
                  value="en"
                >
                  en
                </option>
                <option
                  value="de"
                >
                  de
                </option>
              </select>
            </div>
          </section>
        </footer>
      </section>
    </div>
  </div>
</div>
`;

exports[`<MainLayout /> with variant 3 should render and match the snapshot 1`] = `
<div
  class="ant-spin-nested-loading"
>
  <div
    class="ant-spin-container"
  >
    <div
      class="main-layout StyledMainLayout-jh4dg-0 chyjYC"
    >
      <section
        class="ant-layout"
      >
        <header
          class="ant-layout-header headerLayout"
        >
          <div
            class="logo Layout__LogoContainer-fhrxn-0 gpSMCV"
          >
            <a
              href="/"
            >
              <img
                alt="logo"
                src="IMAGE_MOCK"
              />
            </a>
          </div>
          <ul
            class="ant-menu ant-menu-dark Layout__HeaderMenu-fhrxn-1 iytGGl ant-menu-root ant-menu-inline"
            role="menu"
          >
            <li
              class="ant-menu-item Layout__HeaderMenuItem-fhrxn-2 vxYTZ ant-menu-item-selected"
              role="menuitem"
              style="padding-left: 24px;"
            >
              <span
                aria-label="user"
                class="anticon anticon-user ant-menu-item-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
              <span>
                <a
                  href="/"
                />
              </span>
            </li>
            <li
              class="ant-menu-item Layout__HeaderMenuItem-fhrxn-2 vxYTZ"
              role="menuitem"
              style="padding-left: 24px;"
            >
              <span
                aria-label="user"
                class="anticon anticon-user ant-menu-item-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
              <span>
                <a
                  href="/users"
                />
              </span>
            </li>
            <li
              class="ant-menu-item Layout__HeaderMenuItem-fhrxn-2 vxYTZ"
              role="menuitem"
              style="padding-left: 24px;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle ant-menu-item-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
                  />
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                </svg>
              </span>
              <span>
                <a
                  href="/features"
                />
              </span>
            </li>
            <li
              class="ant-menu-item Layout__HeaderMenuItem-fhrxn-2 vxYTZ"
              role="menuitem"
              style="padding-left: 24px;"
            >
              <span
                aria-label="smile"
                class="anticon anticon-smile ant-menu-item-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="smile"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
                  />
                </svg>
              </span>
              <span>
                <a
                  href="/font-awesome"
                />
              </span>
            </li>
            <li
              class="ant-menu-item Layout__HeaderMenuItem-fhrxn-2 vxYTZ"
              role="menuitem"
              style="padding-left: 24px;"
            >
              <span
                aria-label="loading"
                class="anticon anticon-loading anticon-spin ant-menu-item-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="loading"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                  />
                </svg>
              </span>
              <span>
                <a
                  href="/loader"
                />
              </span>
            </li>
            <li
              class="ant-menu-item Layout__HeaderMenuItem-fhrxn-2 vxYTZ"
              role="menuitem"
              style="padding-left: 24px;"
            >
              <span
                aria-label="export"
                class="anticon anticon-export ant-menu-item-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="export"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M888.3 757.4h-53.8c-4.2 0-7.7 3.5-7.7 7.7v61.8H197.1V197.1h629.8v61.8c0 4.2 3.5 7.7 7.7 7.7h53.8c4.2 0 7.7-3.4 7.7-7.7V158.7c0-17-13.7-30.7-30.7-30.7H158.7c-17 0-30.7 13.7-30.7 30.7v706.6c0 17 13.7 30.7 30.7 30.7h706.6c17 0 30.7-13.7 30.7-30.7V765.1c0-4.3-3.5-7.7-7.7-7.7zm18.6-251.7L765 393.7c-5.3-4.2-13-.4-13 6.3v76H438c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 000-12.6z"
                  />
                </svg>
              </span>
              <span>
                <a
                  href="/export-data"
                />
              </span>
            </li>
            <li
              class="ant-menu-item Layout__HeaderMenuItem-fhrxn-2 vxYTZ"
              role="menuitem"
              style="padding-left: 24px;"
            >
              <span
                aria-label="number"
                class="anticon anticon-number ant-menu-item-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="number"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M872 394c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8H708V152c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v166H400V152c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v166H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h168v236H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h168v166c0 4.4 3.6 8 8 8h64c4.4 0 8-3.6 8-8V706h228v166c0 4.4 3.6 8 8 8h64c4.4 0 8-3.6 8-8V706h164c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8H708V394h164zM628 630H400V394h228v236z"
                  />
                </svg>
              </span>
              <span>
                <a
                  href="/number-converter-demo"
                />
              </span>
            </li>
            <li
              class="ant-menu-item Layout__HeaderMenuItem-fhrxn-2 vxYTZ"
              role="menuitem"
              style="padding-left: 24px;"
            >
              <span
                aria-label="form"
                class="anticon anticon-form ant-menu-item-icon"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="form"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M904 512h-56c-4.4 0-8 3.6-8 8v320H184V184h320c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V520c0-4.4-3.6-8-8-8z"
                  />
                  <path
                    d="M355.9 534.9L354 653.8c-.1 8.9 7.1 16.2 16 16.2h.4l118-2.9c2-.1 4-.9 5.4-2.3l415.9-415c3.1-3.1 3.1-8.2 0-11.3L785.4 114.3c-1.6-1.6-3.6-2.3-5.7-2.3s-4.1.8-5.7 2.3l-415.8 415a8.3 8.3 0 00-2.3 5.6zm63.5 23.6L779.7 199l45.2 45.1-360.5 359.7-45.7 1.1.7-46.4z"
                  />
                </svg>
              </span>
              <span>
                <a
                  href="/sample-form"
                />
              </span>
            </li>
          </ul>
          <div
            class="StyledAppHeader__StyledAppHeaderColored-sc-305pn5-1 btUqTq"
          >
            <div
              class="StyledAppHeader__AvatarWrapper-sc-305pn5-2 khWwDg"
            >
              <div
                class="StyledNotification__NotificationWrapper-sc-103nxwt-0 dQHYeo"
              >
                <span
                  aria-label="bell"
                  class="anticon anticon-bell"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="bell"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M816 768h-24V428c0-141.1-104.3-257.7-240-277.1V112c0-22.1-17.9-40-40-40s-40 17.9-40 40v38.9c-135.7 19.4-240 136-240 277.1v340h-24c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h216c0 61.8 50.2 112 112 112s112-50.2 112-112h216c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM512 888c-26.5 0-48-21.5-48-48h96c0 26.5-21.5 48-48 48zM304 768V428c0-55.6 21.6-107.8 60.9-147.1S456.4 220 512 220c55.6 0 107.8 21.6 147.1 60.9S720 372.4 720 428v340H304z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="StyledAvatar__AvatarWrapper-sc-7zqxik-0 bIXJjY"
              >
                <div
                  class="ant-btn-group ant-dropdown-button"
                >
                  <button
                    class="ant-btn ant-btn-default"
                    type="button"
                  />
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only ant-dropdown-trigger"
                    type="button"
                  >
                    <span
                      aria-label="user"
                      class="anticon anticon-user"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="user"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </header>
        <main
          class="ant-layout-content site-layout-background"
          style="margin: 24px 16px; padding: 24px; min-height: 280px;"
        >
          <div
            class="App__AppWrapper-sc-13edzow-0 hLuJAl"
            data-testid="AppRoutes"
          >
            <article>
              <div>
                <section
                  class="Section-sc-1eulrsm-0 CenteredSection-sc-6zy0wx-0 imGCbL"
                >
                  <h2>
                    <span>
                      Start your next react project in seconds
                    </span>
                  </h2>
                  <p>
                    <span>
                      A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices
                    </span>
                  </p>
                </section>
                <section
                  class="Section-sc-1eulrsm-0 eTEsZl"
                >
                  <h2>
                    <span>
                      Try me!
                    </span>
                  </h2>
                  <form
                    class="Form-dmhz4x-0 ZClLh"
                  >
                    <label
                      for="username"
                    >
                      <span>
                        Show Github repositories by
                      </span>
                      <span
                        class="AtPrefix-sc-1suuq8o-0 fvrDQr"
                      >
                        <span>
                          @
                        </span>
                      </span>
                      <input
                        class="Input-sc-19rkjmi-0 gyJaEd"
                        id="username"
                        placeholder="mxstbr"
                        type="text"
                        value=""
                      />
                    </label>
                  </form>
                </section>
              </div>
            </article>
          </div>
        </main>
        <footer
          class="Wrapper-wcfdfo-0 kJFYpj"
        >
          <section>
            <span>
              © 2021 React Boilerplate
            </span>
            <section>
              <span>
                Get started with your next react application in seconds.
              </span>
            </section>
          </section>
          <section>
            <div
              class="Wrapper-xnjoq9-0 dNmQIR"
            >
              <select
                class="Select-sc-1sm01tk-0 wIjFa"
              >
                <option
                  value="en"
                >
                  en
                </option>
                <option
                  value="de"
                >
                  de
                </option>
              </select>
            </div>
          </section>
        </footer>
      </section>
    </div>
  </div>
</div>
`;
